--- a/src/app/users/feature/users-list/users-list.component.html
+++ b/src/app/users/feature/users-list/users-list.component.html
@@ -1,3 +1,1 @@
-<ul>
-  <li *ngFor="let user of users | async">{{ user.name }}</li>
-</ul>
+<app-user-card *ngFor="let user of users | async" [user]="user" />
