feat: add prop value and emit event for user-card component

--- a/src/app/users/feature/users-list/users-list.component.html
+++ b/src/app/users/feature/users-list/users-list.component.html
@@ -1,1 +1,11 @@
-<app-user-card *ngFor="let user of users | async" [user]="user" />
+<app-user-card
+	*ngFor="let user of users | async"
+	[user]="{
+		id: user.id,
+		name: user.name,
+		website: user.website,
+		phone: user.phone,
+		email: user.email
+	}"
+	(onClick)="handleClick($event)"
+/>
