--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
-:after,
-:before {
+html,
+body {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
