--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,12 @@
 
 html,
 body {
+	height: 100%;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+}
+body {
+	margin: 0;
+	font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
