--- a/src/app/users/feature/users-list/users-list.component.html
+++ b/src/app/users/feature/users-list/users-list.component.html
@@ -1,14 +1,18 @@
-@for (user of users | async; track user.name) {
-	<app-user-card
-		[user]="{
-			id: user.id,
-			name: user.name,
-			website: user.website,
-			phone: user.phone,
-			email: user.email
-		}"
-		(onClick)="handleClick($event)"
-	/>
-} @empty {
-	<p>No users found</p>
-}
+<app-container>
+	<button mat-raised-button color="primary">Primary</button>
+
+	@for (user of users | async; track user.name) {
+		<app-user-card
+			[user]="{
+				id: user.id,
+				name: user.name,
+				website: user.website,
+				phone: user.phone,
+				email: user.email
+			}"
+			(onClick)="handleClick($event)"
+		/>
+	} @empty {
+		<p>No users found</p>
+	}
+</app-container>
