--- a/src/app/users/ui/user-card/user-card.component.html
+++ b/src/app/users/ui/user-card/user-card.component.html
@@ -12,6 +12,6 @@
 	</mat-card-content>
 
 	<mat-card-actions align="end">
-		<button mat-raised-button color="warn" (click)="getUserId()">Remove</button>
+		<button mat-raised-button color="warn" (click)="onRemove()">Remove</button>
 	</mat-card-actions>
 </mat-card>
