--- a/src/app/users/feature/users-list/users-list.component.html
+++ b/src/app/users/feature/users-list/users-list.component.html
@@ -5,16 +5,7 @@
 
   <div class="grid-users-list">
     @for (user of users | async; track user.name) {
-      <app-user-card
-        [user]="{
-          id: user.id,
-          name: user.name,
-          website: user.website,
-          phone: user.phone,
-          email: user.email
-        }"
-        (onClick)="removeUser($event)"
-      />
+      <app-user-card [user]="user" (onClick)="removeUser($event)" />
     } @empty {
       <p>No users found</p>
     }
