--- a/src/app/users/ui/create-edit-user-modal/create-edit-user-modal.component.html
+++ b/src/app/users/ui/create-edit-user-modal/create-edit-user-modal.component.html
@@ -1,9 +1,55 @@
 <h2 mat-dialog-title>Create User</h2>
 
 <mat-dialog-content>
-  This dialog showcases the title, close, content and actions elements.
-</mat-dialog-content>
+  <form class="form" [formGroup]="userForm" (submit)="onSubmit()">
+    <mat-form-field class="form__field">
+      <mat-label>Name</mat-label>
+      <input matInput autofocus formControlName="name" placeholder="Type your name" />
+      @for (validation of userFormValidationMessages.name; track validation.type) {
+        <mat-error *ngIf="userForm.controls.name.hasError(validation.type)">
+          {{ validation.message }}
+        </mat-error>
+      }
+    </mat-form-field>
 
-<mat-dialog-actions align="end">
-  <button mat-button [mat-dialog-close]="true">Create</button>
-</mat-dialog-actions>
+    <mat-form-field class="form__field">
+      <mat-label>Website</mat-label>
+      <input matInput formControlName="website" placeholder="Type a website" />
+      @for (validation of userFormValidationMessages.website; track validation.type) {
+        <mat-error *ngIf="userForm.controls.website.hasError(validation.type)">
+          {{ validation.message }}
+        </mat-error>
+      }
+    </mat-form-field>
+
+    <mat-form-field class="form__field">
+      <mat-label>Phone</mat-label>
+      <input type="tel" matInput formControlName="phone" placeholder="Type a phone" />
+      @for (validation of userFormValidationMessages.phone; track validation.type) {
+        <mat-error *ngIf="userForm.controls.phone.hasError(validation.type)">
+          {{ validation.message }}
+        </mat-error>
+      }
+    </mat-form-field>
+
+    <mat-form-field class="form__field">
+      <mat-label>Email</mat-label>
+      <input type="email" matInput formControlName="email" placeholder="Type an email" />
+      @for (validation of userFormValidationMessages.email; track validation.type) {
+        <mat-error *ngIf="userForm.controls.email.hasError(validation.type)">
+          {{ validation.message }}
+        </mat-error>
+      }
+    </mat-form-field>
+
+    <button
+      mat-raised-button
+      color="primary"
+      type="submit"
+      class="form__btn"
+      [disabled]="!userForm.valid"
+    >
+      Create
+    </button>
+  </form>
+</mat-dialog-content>
