--- a/src/app/users/feature/users-list/users-list.component.html
+++ b/src/app/users/feature/users-list/users-list.component.html
@@ -4,8 +4,8 @@
   </div>
 
   <div class="grid-users-list">
-    @for (user of users | async; track user.name) {
-      <app-user-card [user]="user" (onClick)="removeUser($event)" />
+    @for (user of users | async; track user.id) {
+      <app-user-card [user]="user" (remove)="removeUser($event)" (edit)="openDialog($event)" />
     } @empty {
       <p>No users found</p>
     }
