--- a/src/app/users/ui/user-card/user-card.component.html
+++ b/src/app/users/ui/user-card/user-card.component.html
@@ -1,17 +1,22 @@
 <mat-card class="card" appearance="outlined">
-	<mat-card-header>
-		<mat-card-title>{{ user.name }}</mat-card-title>
-	</mat-card-header>
+  <mat-card-header>
+    <mat-card-title>{{ user().name }}</mat-card-title>
+  </mat-card-header>
 
-	<mat-card-content>
-		<mat-list role="list">
-			<mat-list-item role="listitem">Website: {{ user.website }}</mat-list-item>
-			<mat-list-item role="listitem">Phone: {{ user.phone }}</mat-list-item>
-			<mat-list-item role="listitem">Email: {{ user.email }}</mat-list-item>
-		</mat-list>
-	</mat-card-content>
+  <mat-card-content>
+    <mat-list role="list">
+      <mat-list-item role="listitem">Website: {{ user().website }}</mat-list-item>
+      <mat-list-item role="listitem">Phone: {{ user().phone }}</mat-list-item>
+      <mat-list-item role="listitem">Email: {{ user().email }}</mat-list-item>
+    </mat-list>
+  </mat-card-content>
 
-	<mat-card-actions align="end">
-		<button mat-raised-button color="warn" (click)="onRemove()">Remove</button>
-	</mat-card-actions>
+  <mat-card-actions align="end">
+    <button mat-icon-button matTooltip="Edit User" color="primary" (click)="onEditUser()">
+      <mat-icon>edit</mat-icon>
+    </button>
+    <button mat-icon-button matTooltip="Delete User" color="warn" (click)="onRemoveUser()">
+      <mat-icon>delete</mat-icon>
+    </button>
+  </mat-card-actions>
 </mat-card>
