--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,12 +2,17 @@
 
 html,
 body {
-	height: 100%;
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 body {
-	margin: 0;
-	font-family: Roboto, 'Helvetica Neue', sans-serif;
+  width: 100vw;
+  height: 100dvh;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #333;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
