style: update user card styling

--- a/src/app/users/ui/user-card/user-card.component.html
+++ b/src/app/users/ui/user-card/user-card.component.html
@@ -12,11 +12,13 @@
   </mat-card-content>
 
   <mat-card-actions align="end">
-    <button mat-icon-button matTooltip="Edit User" color="primary" (click)="onEditUser()">
+    <button mat-stroked-button matTooltip="Edit User" color="primary" (click)="onEditUser()">
       <mat-icon>edit</mat-icon>
+      Edit
     </button>
-    <button mat-icon-button matTooltip="Delete User" color="warn" (click)="onRemoveUser()">
+    <button mat-stroked-button matTooltip="Delete User" color="warn" (click)="onRemoveUser()">
       <mat-icon>delete</mat-icon>
+      Remove
     </button>
   </mat-card-actions>
 </mat-card>
