--- a/src/app/users/ui/user-card/user-card.component.scss
+++ b/src/app/users/ui/user-card/user-card.component.scss
@@ -1,7 +1,5 @@
 mat-card-actions {
-  border: 1px solid #e0e0e0;
-  border-radius: 4px;
-  margin: 4px;
+  border-top: 1px solid #e0e0e0;
   padding: 0;
 
   & > button {
