--- a/src/app/users/feature/users-list/users-list.component.html
+++ b/src/app/users/feature/users-list/users-list.component.html
@@ -5,7 +5,11 @@
 
   <div class="grid-users-list">
     @for (user of users | async; track user.id) {
-      <app-user-card [user]="user" (remove)="removeUser($event)" (edit)="openDialog($event)" />
+      <app-user-card
+        [user]="user"
+        (remove)="removeUserHandler($event)"
+        (edit)="openDialog($event)"
+      />
     } @empty {
       <p>No users found</p>
     }
