--- a/src/app/users/ui/user-card/user-card.component.scss
+++ b/src/app/users/ui/user-card/user-card.component.scss
@@ -1,8 +1,42 @@
-mat-card-actions {
-  border-top: 1px solid #e0e0e0;
-  padding: 0;
+.card {
+  box-shadow:
+    rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
-  & > button {
+  &__header {
+    display: flex;
+    align-items: center;
+    padding-bottom: 16px;
+  }
+
+  &__content {
+    padding-bottom: 16px;
+
+    &mat-icon {
+      margin-right: 8px;
+      fill: var(--text-color);
+    }
+  }
+}
+
+.header {
+  &__avatar {
+    margin-bottom: 0;
+  }
+}
+
+.row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+
+  &__icon {
     margin-right: 8px;
+  }
+}
+
+mat-card-actions {
+  & > button {
+    width: 100%;
   }
 }
