--- a/src/app/users/feature/users-list/users-list.component.html
+++ b/src/app/users/feature/users-list/users-list.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="grid-users-list">
-    @for (user of users | async; track user.id) {
+    @for (user of users$ | async; track user.id) {
       <app-user-card
         [user]="user"
         (remove)="removeUserHandler($event)"
